--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,viewport-fit=cover">
   <meta name="title" content="https://www.radioshdstreaming.com/vip/">
-<meta name="description" content="Tu Zona V.I.P Radio">
+<meta name="description" content="SALSA BAUL CARACAS STREAMING">
 <meta name="keywords" content="Tu Zona V.I.P Radio">
 <meta name="robots" content="index, follow">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<meta name="author" content="radioshdstreaming.com">
-  <title>Tu Zona V.I.P Radio</title>
+<meta name="author" content="SALSA BAUL CARACAS STREAMING">
+  <title>SALSA BAUL CARACAS STREAMING</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
   <meta name="theme-color" content="dark light">
@@ -18,7 +18,7 @@
   <meta property="og:image:width" content="600">
   <meta property="og:image:height" content="360">
   <meta property="og:title" content="https://www.radioshdstreaming.com/vip/">
-  <meta property="og:description" content="Tu Zona V.I.P Radio">
+  <meta property="og:description" content="SALSA BAUL CARACAS STREAMING">
   <link rel="shortcut icon" href="https://radioshdstreaming.com/img/icon.jpg" type="image/x-icon">
 
   <link rel="stylesheet" href="css/main.min.css">
@@ -31,18 +31,18 @@
       timeRefresh: 5000,
       stations: [
         {
-          name: "Tu Zona V.I.P Radio",
+          name: "SALSA BAUL CARACAS STREAMING",
           hash: "Impelable",
-          description: "Radio Online",
+          description: "EN VIVO",
           logo: "./assets/logo.png",
           album: "./assets/logo.png",
           cover: "",
 		  api: "https://nexostreaming.com/api/get_stream_title.php?url=https://c2.radioshdstreaming.com:8000/vipradio.aac",
-          stream_url: "https://c2.radioshdstreaming.com:8000/vipradio.aac",
+          stream_url: "https://usa14.fastcast4u.com/proxy/baulmania?mp=/1",
           program: {
-            time: "Tu Zona V.I.P Radio",
-            name: "Radio Online",
-            description: "Tú Música",
+            time: "24/7",
+            name: "RADIO STREAMING",
+            description: "DOMINANDO LA ZONA",
             server: 'spotify',
           },
           social: {
